--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <!-- Q2) Placer la balise de votre composant TodoList ici -->
-
-<hr/>
-<!-- Q1) Pour tester rapidement -->
-<h1>Liste de choses à faire PWA - TP3  (debug)</h1>
+<app-todo-list></app-todo-list>
+<hr />
