--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- Q2) Placer la balise de votre composant TodoList ici -->
 <app-todo-list></app-todo-list>
 <hr />
+<app-todo-panel></app-todo-panel>
