--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,3 +1,4 @@
+<img src="../../favicon.ico" style="position: absolute;top:50px;left:1000px;max-width: 50px;"/>
 <section class="todoapp">
     <header class="header">
         <h1 *ngIf="obsToDoList|async as TDL"> {{ TDL.label}}</h1>
@@ -39,3 +40,5 @@
         <button (click)="remType()" class="clear-completed">Supprimer affichées</button>
     </footer>
 </section>
+<hr />
+<app-todo-panel (update)="updateTitle($event)"></app-todo-panel>
