--- a/src/app/todo-panel/todo-panel.component.html
+++ b/src/app/todo-panel/todo-panel.component.html
@@ -2,8 +2,8 @@
     <p id="next1" class="next">&#60;</p>
     <h2 id="item1">Panel</h2>
     <p id="labela">Titre :</p>
-    <input id="item2"type="text"/>
-    <input id="item3"type="button" value="Modifier"/>
+    <input #listName id="item2"type="text"/>
+    <input id="item3"type="button" value="Modifier" (click)="updateTitle(listName.value)"/>
     <p id="labelb">Couleur :</p>
     <input id="item4"type="text"/>
     <input id="item5"type="button" value="Modifier"/>
