--- a/src/app/todo-panel/todo-panel.component.html
+++ b/src/app/todo-panel/todo-panel.component.html
@@ -2,10 +2,19 @@
     <p id="next1" class="next">&#60;</p>
     <h2 id="item1">Panel</h2>
     <p id="labela">Titre :</p>
-    <input #listName id="item2"type="text"/>
-    <input id="item3"type="button" value="Modifier" (click)="updateTitle(listName.value)"/>
-    <p id="labelb">Couleur :</p>
-    <input id="item4"type="text"/>
-    <input id="item5"type="button" value="Modifier"/>
+    <input #listName id="item2" type="text"/>
+    <input id="item3" type="button" value="Modifier" (click)="updateTitle(listName.value)"/>
+    <p id="labelb">Icone :</p>
+    <select #listIcone id="item4" name="logo" >
+        <option value="nuage">nuage</option>
+        <option value="calendrier">calendrier</option>
+        <option value="dossier">dossier</option>
+        <option value="editer">editer</option>
+        <option value="point">localisation</option>
+        <option value="linternet">internet</option>
+        <option value="reseaux">social</option>
+        <option value="maison">maison</option>
+    </select>
+    <input id="item5"type="button" value="Modifier" (click)="updateIcone(listIcone.options[listIcone.selectedIndex].value)"/>
     <p id="next2" class="next">&#62;</p>
 </div>
