--- a/src/app/todo-panel/todo-panel.component.html
+++ b/src/app/todo-panel/todo-panel.component.html
@@ -12,7 +12,7 @@
         <option value="editer">editer</option>
         <option value="point">localisation</option>
         <option value="linternet">internet</option>
-        <option value="reseaux">social</option>
+        <option value="reseau">social</option>
         <option value="maison">maison</option>
     </select>
     <input id="item5"type="button" value="Modifier" (click)="updateIcone(listIcone.options[listIcone.selectedIndex].value)"/>
