--- a/src/app/todo-panel/todo-panel.component.scss
+++ b/src/app/todo-panel/todo-panel.component.scss
@@ -33,7 +33,7 @@
 #labela{
     align-self : start;
     grid-row :2;
-    grid-column-start : 2;  
+    grid-column-start : 3;  
     grid-column-end : 3;
 }
 
@@ -42,12 +42,15 @@
     height : 20%;
     align-self: center;
     grid-row :2;
-    grid-column-start : 2;  
+    grid-column-start : 3;  
     grid-column-end : 3;
 }
 
 #item3{
+    max-width: 80%;
+    max-height: 30%;
     align-self: center;
+    justify-self: center;
     width:100%;
     height : 40%;
     grid-row :2;
@@ -59,21 +62,24 @@
 #labelb{
     align-self : start;
     grid-row :3;
-    grid-column-start : 2;
+    grid-column-start : 3;
     grid-column-end : 3;
 }
 #item4{
     align-self: center;
     width:100%;
-    height : 20%;
+    height : 30%;
     grid-row :3;
-    grid-column-start : 2;
+    grid-column-start : 3;
     grid-column-end : 3;
 }
 #item5{
-    align-self: center;
+    max-width: 80%;
+    max-height: 30%;
     width:100%;
     height : 40%;
+    align-self: center;
+    justify-self: center;
     grid-row :3;
     grid-column-start : 4;
     grid-column-end : 4;
