multilisk without undo/redo

--- a/src/app/todo-acceuil/todo-acceuil.component.html
+++ b/src/app/todo-acceuil/todo-acceuil.component.html
@@ -6,4 +6,4 @@
         </li>
     </ul>
 </div>
-<input style="margin-left:90%;" type="button" value="New"/>
+<input style="margin-left:90%;" type="button" value="New" (click)="appendList()"/>
