--- a/src/app/todo-viz/todo-viz.component.html
+++ b/src/app/todo-viz/todo-viz.component.html
@@ -1,4 +1,5 @@
 <div id="boxviz">
+    <a routerLinkActive="active" routerLink="" > <input type="button" class="destroy2"  value="x" (click)="remove()" /></a>
     <h2 id="titleviz">{{data.label}}</h2>
     <p id="nbviz">nombre restant : {{ nbItemRestant(data.items) }}</p>
 </div>
