--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,25 +1,49 @@
-<img *ngIf="obsToDoList|async as TDL" src="assets/icone/{{TDL.icone}}" style="position: absolute;top:6%;left:63%;max-width: 50px;"/>
+<a routerLink=""
+    style="position: absolute;top:6%;left:36%;max-width: 100px;max-height:100px;transform: scaleX(-1);"><img
+        src="assets/share.png" style="position: absolute;top:6%;left:36%;max-width: 50px" /></a>
+<div [ngClass]="{editingImg : isImg}">       
+<img class="iconeImg" *ngIf="obsToDoList|async as TDL" src="assets/icone/{{TDL.icone}}" style="position: absolute;top:6%;left:63%;max-width: 50px;" (click)="setEditingImg(true)"/>
+<select class="selectImg" name="logo" style="position: absolute;top:6%;left:63%"  >
+    <option (click)="updateIcone('nuage.png')" value="nuage">nuage</option>
+    <option (click)="updateIcone('calendrier.png')" value="calendrier">calendrier</option>
+    <option (click)="updateIcone('dossier.png')" value="dossier">dossier</option>
+    <option (click)="updateIcone('editer.png')" value="editer">editer</option>
+    <option (click)="updateIcone('point.png')" value="point">localisation</option>
+    <option (click)="updateIcone('linternet.png')" value="linternet">internet</option>
+    <option (click)="updateIcone('reseau.png')" value="reseau">social</option>
+    <option (click)="updateIcone('maison.png')" value="maison">maison</option>
+</select>
+</div> 
 <section class="todoapp">
+    <div [ngClass]="{editing :isEditing}">
+        <div class="view3">
+            <h1 class="inputTitle" *ngIf="obsToDoList|async as TDL" (dblclick)="setEditing(true)"> {{ TDL.label}}</h1>
+        </div>
+        <form (ngSubmit)="updateTitle(newTextInput.value)">
+            <input #newTextInput (focusout)="setEditing(false)" name="newTextInput" [(ngModel)]="name"
+                class="edit3" />
+        </form>
+    </div>
     <header class="header">
-        <h1 *ngIf="obsToDoList|async as TDL"> {{ TDL.label}}</h1>
         <form (ngSubmit)="append(lab.value)">
             <input [(ngModel)]="searchValue" name="newTodoInput" class="new-todo" placeholder="Que faire?" autofocus
                 #lab />
         </form>
     </header>
     <section class="main">
-        <input  #toggleAll class="toggle-all" type="checkbox" name="toggleAll" [ngModel]="allCheck" /> <!-- -->
-        <label  (click)="selectAll({isDone :!toggleAll.checked })" for="toggleAll">Mark all as complete</label>
-        <ul class="todo-list"   *ngIf="obsToDoList|async as TDL" >
+        <input #toggleAll class="toggle-all" type="checkbox" name="toggleAll" [ngModel]="allCheck" /> <!-- -->
+        <label (click)="selectAll({isDone :!toggleAll.checked })" for="toggleAll">Mark all as complete</label>
+        <ul class="todo-list" *ngIf="obsToDoList|async as TDL">
             <li *ngFor="let todo of TDL.items; let index = index">
-                <app-todo-item  *ngIf="filter(todo)" [data]="todo" (remove)="remove($event)" (update)="update($event,todo)"></app-todo-item>
+                <app-todo-item *ngIf="filter(todo)" [data]="todo" (remove)="remove($event)"
+                    (update)="update($event,todo)"></app-todo-item>
             </li>
-            
-        </ul> 
+
+        </ul>
     </section>
     <footer class="footer">
         <span class="todo-count" *ngIf="obsToDoList|async as TDL"><strong>{{ nbItemRestant(TDL.items) }}
-        </strong> restantes</span>
+            </strong> restantes</span>
         <ul class="filters">
             <li>
                 <a (click)="filter=filterAll;remType=remAll" [ngClass]="{selected : filter==filterAll }">Tous</a>
@@ -28,7 +52,7 @@
                 <a (click)="filter=filterAct;remType=remAct" [ngClass]="{selected : filter==filterAct }">Actifs</a>
             </li>
             <li>
-                <a (click)="filter=filterCom;remType=remCom"  [ngClass]="{selected : filter==filterCom }">Complétés</a>
+                <a (click)="filter=filterCom;remType=remCom" [ngClass]="{selected : filter==filterCom }">Complétés</a>
             </li>
             <li>
                 <a (click)="undo()">Undo</a>
@@ -40,5 +64,3 @@
         <button (click)="remType()" class="clear-completed">Supprimer affichées</button>
     </footer>
 </section>
-<hr />
-<app-todo-panel (updateI)="updateIcone($event)" (update)="updateTitle($event)"></app-todo-panel>
