--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -64,3 +64,4 @@
         <button (click)="remType()" class="clear-completed">Supprimer affichées</button>
     </footer>
 </section>
+<app-todo-panel></app-todo-panel>
