--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,8 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title routerLink="/home">Home</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -14,5 +12,6 @@
   </ion-header>
 
   <div id="container">
+    <app-todo-acceuil></app-todo-acceuil>
   </div>
 </ion-content>
