--- a/src/app/todopage/todopage.page.html
+++ b/src/app/todopage/todopage.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title routerLink="/home">Home</ion-title>
+    <ion-title class="home" routerLink="/home">Home</ion-title>
   </ion-toolbar>
 </ion-header>
 
