--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title routerLink="/home">Home</ion-title>
+    <ion-title class="home" routerLink="/home">Home</ion-title>
   </ion-toolbar>
 </ion-header>
 
