--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,11 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+.home:hover{
+  cursor: pointer;
+}
+
+
 /* You can add global styles to this file, and also import other style files */
 html,
 body {
